sumo/tests/sumo/output/e3/errors/id_missing/errors.sumo
Error: Attribute 'id' is missing in definition of a e3-detector.
Quitting (on error).
